web/src/styles/node_editor.css
/* ... */
.react-flow.zoomed-out .node-header .node-title.big {
  font-size: 24px;
  opacity: 1;
}
.react-flow.zoomed-out .node-body .icon-bg,
.react-flow.zoomed-out .node-body .audio-controls,
.react-flow.zoomed-out .node-header .node-title {
  opacity: 0;
}

.react-flow.zoomed-out .node-body .node-error {
  height: 60px;
  color: transparent;
  overflow: hidden;
  pointer-events: none;
}

.react-flow.zoomed-out .node-header button {
  opacity: 0;
}

.react-flow.zoomed-out .node-header svg {
  display: hidden;
}
.react-flow.zoomed-out .namespace {
  display: none;
}

.react-flow.zoomed-out .react-flow__node-nodetool\.loop\.Loop {
  background-color: transparent;
}

/* HIDE ENUM HANDLE */
.node-property.enum .react-flow__handle {
  display: none;
}

/* LIST VIEW */
.node-property.list ul {
  max-height: 500px;
  overflow-y: auto;
  padding: 0;
  margin: 0 0 2px 0;
}

/* DROPZONE */
.dropzone {
  position: relative;
  outline: 1px dashed #55555599;
  margin: 0;
  /* margin: 6px auto 2px auto; */
}

.node-property .dropzone:hover {
  outline: 1px dashed #77777799;
  /* margin: 6px auto 2px auto; */
}

.dropzone p.centered {
  margin: auto;
  text-align: left;
  margin: auto;
  text-align: left;
  padding: 2px 4px;
  min-width: 60px;
  min-height: 14px;
  line-height: 1.1em;
  word-spacing: -2px;
  font-size: var(--font-size-tiny);
  color: var(--c_gray4);
}

.dropzone img {
  height: auto;
  max-width: 100%;
  max-height: 160px;
  margin: 0 auto;
  display: block;
  width: auto !important;
}

.node-property .dropzone.dropped {
  outline: 0 none;
  border: 0;
}

/* NODE SELECTION RECT */
.react-flow__selection,
.react-flow .react-flow__nodesselection-rect,
.react-flow__nodesselection-rect:focus-visible,
.react-flow .react-flow__nodesselection-rect:focus {
  background: rgba(80, 100, 140, 0.2) !important;
  border: 0;
}

.react-flow .react-flow__nodesselection-rect {
  outline: 1px solid var(--c_gray6) !important;
  outline-offset: 10px;
  border-radius: 1px;
}

/* drag */
.react-flow__selection {
  outline: none;
  border: 1px solid var(--c_gray6) !important;
  background-color: #33333355;
  border-radius: 0.25em;
}
.react-flow .react-flow__pane.dragging {
  cursor: grabbing !important;
}

/*TOOLTIP-1 */
.tooltip-1 {
  background-color: var(--c_gray2);
  background-color: transparent;
  padding: 2em;
  color: var(--c_white) !important;
}

span.tooltip-1,
span.tooltip-category-info {
  color: var(--c_white) !important;
  display: block !important;
  text-align: left;
  max-width: 250px !important;
  word-break: normal;
  padding: 0;
  margin: 0;
}

span.tooltip-category-info {
  margin-left: 1em;
}

span.tooltip-small {
  font-size: var(--font-size-small);
  color: var(--c_white) !important;
}

/* COLLAPSED NODE */
.node-body.collapsed .node-property {
  height: 12px;
  min-height: unset;
  margin-bottom: 0;
  margin-top: 0;
}

.node-body.collapsed .node-property label,
.node-body.collapsed .inner-property p {
  font-size: var(--font-size-tiny);
  top: 2px;
}

.node-body.collapsed .value {
  font-size: var(--font-size-tiny);
  top: 2px;
  height: 15px;
}

.node-body.collapsed .react-flow__handle-left {
  top: 12px;
  height: 9px;
}

.node-body.collapsed .node-property .MuiSlider-root .MuiSlider-track {
  border-bottom-width: 1px;
  top: -8px;
}

.node-body.collapsed .dropzone,
.node-body.collapsed video {
  position: absolute;
  top: 2px;
  right: 2px;
  height: 14px;
  padding: 0;
  margin: 0;
  top: 0;
  max-width: 70px;
  outline: 0 none;
}

.node-body.collapsed .dropzone p {
  font-size: var(--font-size-tiny);
  padding: 0 2px;
  margin: 0;
}

.node-body.collapsed .dropzone img {
  padding: 0 2px;
  margin: 0;
  max-height: 12px;
}

.node-body.collapsed .MuiSlider-track {
  opacity: 0.6;
}

.node-body.collapsed .MuiInput-root,
.node-body.collapsed .node-property textarea,
.node-body.collapsed .node-property code,
/* .node-body.collapsed .edge-property .value, */
.node-body.collapsed .MuiSwitch-switchBase,
.node-body.collapsed .mui-select,
.node-body.collapsed .audio-controls,
.node-body.collapsed .video-controls,
.node-body.collapsed .waverecorder,
.node-body.collapsed .value.nodrag,
.node-body.collapsed .process-timer,
.node-body.collapsed .node-logs,
.node-body.collapsed .MuiSwitch-root {
  visibility: hidden;
  display: none;
}

.node-body.collapsed .edit-value {
  top: -1px;
}

.node-body.collapsed .edit-value .MuiInput-root {
  visibility: visible;
  display: block;
}

/* LOOP COLLAPSED */
.react-flow__node-nodetool\.group\.Loop .loop-node.collapsed {
  min-height: 7em;
  height: 7em;
}
.react-flow__node-nodetool\.group\.Loop .loop-node.collapsed .tools {
  display: none;
}

/* INPUT & OUTPUT NODES */
.react-flow .input-node .node-header,
.react-flow .output-node .node-header {
  background-color: var(--c_gray3);
  margin: 0;
}

/* COMMENT NODES */
.react-flow__node-nodetool\.workflows\.base_node\.Comment {
  width: auto;
  min-width: 100px;
  min-height: 50px;
  max-width: 5000px;
  max-height: 5000px;
  padding: 0;
  border-radius: 4px;
  background-color: #0002;
  box-shadow: none;
  overflow: hidden;
  z-index: -1 !important;
}
.react-flow.zoomed-out .react-flow__node-nodetool\.workflows\.base_node\.Comment,
.react-flow.zoomed-out .react-flow__node-nodetool\.group\.Loop {
  background-color: #0002;
}

.react-flow__node-nodetool\.workflows\.base_node\.Comment.selected {
  box-shadow: none !important;
  border: 0;
  outline: 1px solid #555 !important;
}

.react-flow__resize-control.handle.bottom.right {
  opacity: 0;
  z-index: 500;
  top: unset;
  left: unset !important;
  bottom: -9px;
  right: -10px;
  width: 17px;
  height: 17px;
  background-color: var(--c_gray2) !important;
}

.react-flow__node
  .comment-node:hover
  .react-flow__resize-control.handle.bottom.right {
  opacity: 1;
}

.react-flow__resize-control svg {
  width: 15px;
  height: 15px;
  color: var(--c_gray5);
}

.react-flow__resize-control:hover svg {
  color: var(--c_hl1);
}

.comment-node label {
  display: none;
}
/* ... */

